:memo: UPDATE V2